--- a/GUI/Makefile
+++ b/GUI/Makefile
@@ -6,7 +6,13 @@ clean:
 	find . -name "*.jfm" -delete
 	find . -name "*.bluej" -delete
 	find . -name "*.~ava" -delete
-	find . -name "*.moe" -delete
+	# find . -name "*.save" -delete
 	find . -name ".DS_Store" -delete
+
+run-linux: clean javac
+	java -cp . Gui
+
+run: clean javac
+	java Gui
 
 default: javac
